django-app/django-deployment.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: mysite
  namespace: django-app
spec:
  replicas: 2
  selector:
    matchLabels:
      app: mysite
  template:
    metadata:
      labels:
        app: mysite
    spec:

      # ------------------------------
      # 1) DB migrate 먼저 실행 (initContainer)
      # ------------------------------
      containers:
        - name: mysite
          image: ju0lee/mysite:build-17
          ports:
            - containerPort: 8000
          command: ["gunicorn"]
          args: ["config.wsgi:application", "--bind", "0.0.0.0:8000"]
