django-app/ingress.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: django-ingress
  namespace: django-app
  annotations:
    kubernetes.io/ingress.class: "nginx"
spec:
  rules:
    - host: mysite.local
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: django-svc
                port:
                  number: 8000
